# fafi

./: .Taskfile  .air.toml  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  DESIGN.md  LICENSE  Makefile  Pipfile  README.md  README.rst  devbox.json  faff.py  go.mod  go.sum  main.go  main_test.go  pyproject.toml  test_test.py
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot.yml  go-build.yml  python-package.yml
bookmark/: actions.go  bookmark.go  database.go  database_test.go  helpers.go  model.go  probe.go  probe_test.go  sqlite.go  url.go  url_test.go
contrib/: fafi.service
fafi/: LICENSE  README.rst  app.py  appdata.py  build.sh  cli.py  db.py  fafi.py  pyproject.toml
fafi/src/fafi/: __main__.py  actions.py  app.py  commands.py  configuration.py  data.py  db.py  fafi.py  firefox.py  index.py  utility.py
integration/: firefox.go
progress/: progress.go  progress_test.go
pub/: index.html
safety/: loader.go  loader_test.go  matcher.go  matcher_test.go
safety/testdata/: urlhaus_sample.csv
sander/: cli.go  cli_test.go  debug.go  env.go  file.go  string.go
src/fafi/: __main__.py  app.py  appdata.py  core.py  db.py  firefox.py  import_firefox.py  import_list.py  main.py  webui.py
src/fafi/templates/: search.html
tests/: test_fafi.py
